#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-60
2015-02-08 Mikhail S. Dubrovin
- add support for Andor3d (PSAS-139)
  update modules GlobalUtils.py, CalibParsStore.py, SegGeometryMatrixV1.py, SegGeometryStore.py 
  update modules CalibParsStore.h, GenericCalibPars.cpp
- add src/CalibParsBaseAndor3dV1.py
	
Tag: V00-02-59
2015-12-17 Mikhail S. Dubrovin
- GeometryAccess.(h,cpp) - change m_dict_of_comments map[string]=string to map[int]=string (PSAS-11)
- GeometryObject.(py,cpp) - adjust geo output string format to be the same
- ex_geometry_access.cpp - change file directory

Tag: V00-02-58
2015-12-16 Mikhail S. Dubrovin
- GeometryAccess.py - change dictionary of comments key to integer index (to order comments) (PSAS-11)
- GeometryObject.py - change format for output geo string 
	
Tag: V00-02-57
2015-12-07 Mikhail S. Dubrovin
- CalibParsStore.py - add calibration support for Timepix, Fli, Pimax (PSAS-139)
- GeometryObject.py - add get_origin, get_rot, get_tilt methods
- GeometryAccess.py, GeometryObject.py - update sphinx documentation
	
Tag: V00-02-56
2015-12-04 Mikhail S. Dubrovin
- GlobalUtils.py - add support for Fccd, Timepix, Fli, Pimax (PSAS-139)
- CalibParsStore.py - add support for Fccd
  -- TODO: Timepix, Fli, Pimax
	
Tag: V00-02-55
2015-11-09 TJ Lane
- Added explicit list of BldInfo names to GlobalUtils.py

Tag: V00-02-54
2015-10-14 Mikhail S. Dubrovin
- Fix crash if detector source is missing in data (PSAS-139)
   - CalibParsStore.py - method Create now returns object even if the detector source is missing.