@@ -11,12 +11,15 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-61
+2015-02-09 Mikhail S. Dubrovin
+- add src/CalibParsBaseAndor3dV1.py - which was forgotten at last commit 
+	
 Tag: V00-02-60
 2015-02-08 Mikhail S. Dubrovin
 - add support for Andor3d (PSAS-139)
   update modules GlobalUtils.py, CalibParsStore.py, SegGeometryMatrixV1.py, SegGeometryStore.py 
   update modules CalibParsStore.h, GenericCalibPars.cpp
-- add src/CalibParsBaseAndor3dV1.py
 	
 Tag: V00-02-59
 2015-12-17 Mikhail S. Dubrovin
